Fix Product Stretched Images

--- a/css/productsPage.css
+++ b/css/productsPage.css
@@ -69,12 +69,12 @@
 .card .card-body{
     display: flex;
     flex-flow: column;
-    justify-content: end;
+    justify-content: space-between;
 }
 
 .card{
     border: none !important;
-    background-color: rgb(248, 240, 240) !important;
+    background-color: rgba(248, 240, 240, 0.425) !important;
     border-radius: 0px;
     opacity: 0.9;
     transition: 200ms;
@@ -115,6 +115,15 @@
 
 
 #bodyProducts img{
-    height: 20rem;
-    border-radius: 0px;
+max-height: inherit;
+}
+
+#img{
+    max-height: 200.14px;
+    min-height: 200.14px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
